# physics-sound-lab

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  index.html
generativos/: index.html
generativos/cadencia-orbital/: README.md  cadencia-orbital.html
generativos/chromatic-emission/: index.html
generativos/kepler-vs-voyager/: .gitignore  PLAN.md
generativos/orbifold-walker/: PLAN.md  README.md  index.html
generativos/rameau-machine/: PLAN.md  README.md  index.html
generativos/set-class-attractor/: PLAN.md  index.html
generativos/sympathetic-12/: Cargo.toml  README.md  TODO.md
generativos/sympathetic-12/src/: filters.rs  lib.rs  resonance.rs  reverb.rs  string.rs  voice.rs
generativos/sympathetic-12/web/: index.html
generativos/sympathetic-12/web/js/: audio-processor.js  visualization.js
generativos/sympathetic-mini/: build.sh
generativos/sympathetic-strings/: build.sh
generativos/tonnetz-atractor/: README.md  index.html  tonnetz-chromatic.html  tonnetz-dual.html  tonnetz-grid.html  tutorial.html
harmonices-mundi/: index.html
lissajous/: index.html
metronomos/: LICENSE  index.html
metronomos/onda/: index.html
metronomos/pendulo/: index.html
metronomos/polirritmico/: index.html
metronomos/rebote/: index.html
oscilador-armonico/: index.html
papers/harmonices-mundi/: ARTICLE_v1.html
papers/paper-orbifold-walker/: ARTICLE_v1.html
papers/paper-rameau-machine/: ARTICLE_v1.html
papers/paper-set-class-attractor/: ARTICLE_v1.html
tonnetz-atractor/: LICENSE  README.md  index.html  tutorial.html
(+48 files in other folders)
